# pecan

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  DESIGN.md  Makefile  Package.resolved  Package.swift  README.md  build_linux_vm.sh  dev_restart.sh  dev_start.sh  dev_stop.sh  gen_proto.sh  pecan_memory.db  pecan_memory.jsonl
Sources/CPecanFuse/: pecan_fuse.c
Sources/PecanAgent/: BuiltinFragments.swift  BuiltinTools.swift  COWOverlayFS.swift  ChangesetHandler.swift  FUSEServer.swift  HTTPProxySocket.swift  HookManager.swift  HttpClient.swift  LinuxFUSE.swift  LuaTool.swift  MemoryClient.swift  MemoryFUSEFilesystem.swift  ProjectToolClient.swift  PromptComposer.swift  PromptFragment.swift  SkillManager.swift  SkillsClient.swift  SkillsFUSEFilesystem.swift  StreamWriter.swift  TaskClient.swift  ToolManager.swift  main.swift
Sources/PecanAgentCore/: AgentDependencies.swift  AgentEventHandler.swift  AgentEventSink.swift  BuiltinFragments.swift  HookManager.swift  LuaModuleDetector.swift  LuaStatePool.swift  MemoryClient.swift  ProjectToolClient.swift  PromptComposer.swift  PromptFragment.swift  SkillManager.swift  SkillsClient.swift  ToolManager.swift
Sources/PecanBuilder/: main.swift
Sources/PecanFSServer/: FilesystemProtocol.swift  MemoryFilesystem.swift  OverlayFilesystem.swift  SkillsFilesystem.swift  main.swift
Sources/PecanMLXServer/: ModelManager.swift  main.swift
Sources/PecanMockLLM/: main.swift
Sources/PecanOverlayCore/: COWOverlayCore.swift
Sources/PecanServer/: AgentNames.swift  AgentServiceProvider.swift  ChangesetClient.swift  ClientServiceProvider.swift  FSServerManager.swift  MLXProcessManager.swift  MergeEngine.swift  MergeQueueStore.swift  ModelCache.swift  ProjectStore.swift  ProjectToolRegistry.swift  Providers.swift  RemoteSpawner.swift  ScopedStore.swift  ServerBootstrap.swift  SessionManager.swift  SessionMeta.swift  SessionStore.swift  TeamStore.swift  VMManager.swift  main.swift
Sources/PecanServerCore/: AgentNames.swift  SessionMeta.swift
Sources/PecanSettings/: ProviderConfig.swift  SettingsStore.swift
Sources/PecanShared/: Config.swift  ServerStatus.swift  pecan.proto  (+2 more)
designs/: overlay-filesystem.md
pecan/: Cargo.toml
pecan-cli/: Cargo.toml
pecan-core/: Cargo.toml
pecan-core/src/: config.rs  lib.rs  memory.rs  tools.rs
pecan-providers/: Cargo.toml
pecan-server/: Cargo.toml
pecan-server/src/: main.rs
pecan-tui/: Cargo.toml
pecan-tui/src/: lib.rs  theme.rs
pecan/src/: main.rs
(+86 files in other folders)
