[package]
name = "pecan-server"
version = "0.1.0"
edition = "2024"

[dependencies]
pecan-core = { path = "../pecan-core" }
pecan-providers = { path = "../pecan-providers" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
uuid.workspace = true
