[package]
name = "pecan"
version = "0.1.0"
edition = "2024"

[dependencies]
pecan-core = { path = "../pecan-core" }
pecan-providers = { path = "../pecan-providers" }
pecan-tui = { path = "../pecan-tui" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
